<resources>
    <string name="vaccinationRequirement">Vaccination Requirement</string>
    <string name="uploadPrfessionalPicture">Upload a professional picture. Remember recruiters and companies can see this.</string>
    <string name="addNew">Add New</string>
    <string name="validPhoneNumber">Enter a valid phone number</string>
    <string name="postJob">Post a Job</string>
    <string name="teamMemberAccount">Team Member Account</string>
    <string name="languageRequirement">Language Requirement</string>
    <string name="completeProfile">Complete your profile to showcase your background and experience</string>
    <string name="showcase">SHOWCASE</string>
    <string name="completeCompanyProfile">Complete your profile to showcase your company, with the opportunity to emphasize equity and inclusion</string>
    <string name="congrats">Congrats! You\'ve completed the Demographic questions.</string>
    <string name="discover">DISCOVER</string>
    <string name="postJobs">Post Job</string>
    <string name="shareJobs">Share unlimited job opportunities with our community of underrepresented talent</string>
    <string name="connectDirectly">Connect directly with qualified applicants whose background and experience match your needs.</string>
    <string name="instantDiscover">Instantly discover and apply to opportunities that match your intrests.</string>
    <string name="connect">CONNECT</string>
    <string name="connectWith">Connect with our community for support along the way!</string>
    <string name="app_name">UIT</string>
    <string name="uiDesigner">UI/UX Designer</string>
    <string name="thankYouForCreatingAccount">Thank you for creating your account. Your selected company admin will review and approve your request!</string>
    <string name="weUseThisToReachOutToYou">We use this to reach out to you</string>
    <string name="jobTitle">Job Title</string>
    <string name="degree">Degree</string>
    <string name="fullTime">Full Time</string>
    <string name="fullTimeDetail">Full-Time</string>
    <string name="partTimeDetail">Part-Time</string>
    <string name="featured">Featured</string>
    <string name="latestJobs">Latest Jobs</string>
    <string name="myJobs">My Jobs</string>
    <string name="notifications">Notifications</string>
    <string name="selectEmployee">Select the numbers of employees within the company.</string>
    <string name="uitMember">UIT Members</string>
    <string name="selectSize">Are you interested in a particular company size? Select all that apply</string>
    <string name="selectSizeDetail">Company size represent the total number of employees at the company.</string>
    <string name="whatFunding">What funding round are you in?</string>
    <string name="startDate">Start Date</string>
    <string name="preferredPassword">Enter a secure password for this account.</string>
    <string name="endDate">End Date</string>
    <string name="google">Google</string>
    <string name="companyDetail">Company Details</string>
    <string name="applicantStage">Are you interested in a particular company stage? Select all that apply</string>
    <string name="applicantStageDetail">Company stage represent the company’s most recent funding round; a measure of company maturity</string>
    <string name="locationInterest">Location Interest (Select all that apply)</string>
    <string name="employmentInterest">Employment Interest (Select all that apply)</string>
    <string name="selectYourPreferences">Select your preferences.</string>
    <string name="school">School</string>
    <string name="workExperience">Work Experience</string>
    <string name="addYourWorkHistoryBelow">Add your work history Below.</string>
    <string name="graduationDay">Graduation Day</string>
    <string name="startYear">Start Year</string>
    <string name="addExperience">Add Experience</string>
    <string name="fieldOfStudy">Field Of Study</string>
    <string name="professionalOrUniversityCertification">Professional or University Certification</string>
    <string name="addEducation">Add Education</string>
    <string name="selectYourDegree">Select your degree or certification.</string>
    <string name="whatIsYourJobTitle">What is your job title?</string>
    <string name="welcomeBack">Welcome!</string>
    <string name="continueCongrats">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="toEnsure">To ensure you\'re notified of messages and</string>
    <string name="latestEvent">latest events, please allow notifications.</string>
    <string name="notificationPermission">Notification Permission</string>
    <string name="allowNotification">Allow Notification</string>
    <string name="professionalInterest">Professional Interest</string>
    <string name="whatProfessionalInterest">What are some of your professional interest?</string>
    <string name="letsFindYourCompany">Let\'s Find Your Company.</string>
    <string name="login">Login</string>
    <string name="degreeOrCertification">Degree or Certification</string>
    <string name="decline">Decline</string>
    <string name="requestToJoin">Request to join Airbnb on UIT</string>
    <string name="accept">Accept</string>
    <string name="nextLetsMove">Next, let\'s move on to the professional career portion of your profile.</string>
    <string name="reviewingYourAccount">We\'re reviewing your account and looking forward to our scheduled call.
    our team will reach out within 24hours.Should you have any questions, you can email us at </string>
    <string name="logout">Logout</string>
    <string name="backToLogin">Back To Login</string>
    <string name="createAccount">Create Account</string>
    <string name="onSite">On-Site</string>
    <string name="sales">Sales</string>
    <string name="edit">Edit</string>
    <string name="greenHouseAccount">Greenhouse Account</string>
    <string name="viewMap">View Map</string>
    <string name="connectTwo">connect</string>
    <string name="greenhouse">Greenhouse</string>
    <string name="connected">Connected</string>
    <string name="travel">Travel</string>
    <string name="enterpreneurship">Entrepreneurship</string>
    <string name="lifeStyle">Lifestyle</string>
    <string name="restFilter">Rest Filter</string>
    <string name="applyFilter">Apply Filter</string>
    <string name="delete">Delete</string>
    <string name="salary">Salary</string>
    <string name="hybrid">Hybrid</string>
    <string name="pause">Pause</string>
    <string name="remote">Remote</string>
    <string name="contract">Contract</string>
    <string name="freeLance">FreeLance</string>
    <string name="internship">Internship</string>
    <string name="workLocation">Work Location</string>
    <string name="partTime">Part Time</string>
    <string name="employmentType">Employment Type</string>
    <string name="currentLocation"><u>Current Location</u></string>
    <string name="setYourFilter">Set Your Filter</string>
    <string name="applied">Applied</string>
    <string name="createCompanyProfile">Create Company Profile</string>
    <string name="sendRequest">Send Request</string>
    <string name="companyNotRegister">It appears your company is not registered on our platform. Please contact
    your company admin and request they make a company profile.</string>
    <string name="saved">Saved</string>
    <string name="engineering">Engineering</string>
    <string name="products">Products</string>
    <string name="finance">Finance</string>
    <string name="marketing">Marketing</string>
    <string name="design">Design</string>
    <string name="entrepreneurship">Entrepreneurship</string>
    <string name="ar">AR/VR</string>
    <string name="blockChain">Blockchain</string>
    <string name="technology">Technology</string>
    <string name="ventureCapital">Venture Capital</string>
    <string name="healthWellness">Health &amp; Wellness</string>
    <string name="artMusic">Art &amp; Music</string>
    <string name="socialJustice">Social Juctice</string>
    <string name="education">Education</string>
    <string name="bioTech">Bio-Tech</string>
    <string name="investing">Investing</string>
    <string name="completeYourProfile">Complete your profile to get matched with jobs that fit your criteria.</string>
    <string name="complete">Complete Profile</string>
    <string name="not">Not Now</string>
    <string name="takeMeThere">Take me there</string>
    <string name="orContinueWith">or continue with</string>
    <string name="signIn">Sign in</string>
    <string name="doNotHaveAnAccount">Don\'t have an Account? </string>
    <string name="contineu">Sign in and continue where you left off.</string>
    <string name="my_text"><u>Or Sign In</u></string>
    <string name="notNow"><u>No. Not Now</u></string>
    <string name="johnDoe">John Doe</string>
    <string name="yourProfile">Your Profile is ⅓ complete</string>
    <string name="flaggedApplicants">Flagged Applicants</string>
    <string name="cancel">Cancel</string>
    <string name="illustrationDesigner">Illustration Designer</string>
    <string name="nameOfReference">Name of reference</string>
    <string name="addReference">Add Reference</string>
    <string name="remove">Remove</string>
    <string name="text_addReference"><u>Add Reference (optional)</u></string>
    <string name="signUp">Sign up now</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="companyLogin">For Company login, click here.</string>
    <string name="useEmail">Use email or Login with social</string>
    <string name="signUpHere">Sign up here</string>
    <string name="signingUp">By signing up, you are agree to our</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="and">and our</string>
    <string name="middleEasternOrNorthAfrican">Middle Eastern Or North African</string>
    <string name="team">Team</string>
    <string name="hispancoOrLatino">Hispanic Or Latino</string>
    <string name="onlyYouCanSeeThis">Only You Can See This</string>
    <string name="experience">Experience</string>
    <string name="aboutTheRole">About the role</string>
    <string name="health">Health &amp; Wealthiness</string>
    <string name="uiDesign">UI Designer</string>
    <string name="tellCandidateAboutTheJob">Tell candidates about the job.</string>
    <string name="coverLetterPdf"><u>Cover Letter.pdf</u></string>
    <string name="resumePdf"><u>Resume.pdf</u></string>
    <string name="community">Community</string>
    <string name="browseOtherJobs">Browse Other Jobs</string>
    <string name="chat">Chat</string>
    <string name="postDescription">Post description goes here. 1 line of text limit</string>
    <string name="titleOfPost">Title of post goes here</string>
    <string name="whatAreTheJobResponsibilities">What are the job responsibilities?</string>
    <string name="flaggedJobs">Flagged Jobs</string>
    <string name="graphicDesigner">Graphic Designer</string>
    <string name="productDesigner">Product Designer</string>
    <string name="interestedRole">Interested Role</string>
    <string name="employed">Employed</string>
    <string name="allComments">All Comments</string>
    <string name="message">Message</string>
    <string name="overview">Overview</string>
    <string name="home">Home</string>
    <string name="comments">Comments</string>
    <string name="visitWebsite">Visit Website</string>
    <string name="documents">Documents</string>
    <string name="name">Name</string>
    <string name="whatWouldYouLikeToDo">What would you like to do?</string>
    <string name="add">Add</string>
    <string name="hireAndContinue">Hire and continue</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="preferred">Preferred</string>
    <string name="addInvitation">Add Invitation</string>
    <string name="privacy">Privacy Policy</string>
</resources>