<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".generic.activities.SignInActivity">

    <include
        android:id="@+id/include1"
        layout="@layout/simple_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="left"
        android:text="@string/welcomeBack"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include1" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="left"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />


    <TextView
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:text="@string/contineu"

        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/app_color_edit_text_focused"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:hint="Enter Your Email"
        android:maxLines="1"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/grayShadeFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grayShadeFour"
        >


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/app_color_edit_text_focused"
            android:hint=""
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_62sdp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/_62sdp"
        android:background="@drawable/login_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/_32sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_32sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"

        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"

        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/noAccountYet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46sdp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="bottom"
        android:text="@string/doNotHaveAnAccount"

        android:textColor="@color/grayShadeThree"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/signingUp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/noAccountYet"
        app:layout_constraintStart_toEndOf="@+id/noAccountYet"
        app:layout_constraintTop_toTopOf="@+id/noAccountYet" />


    <TextView
        android:id="@+id/signingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/signingUp"
        android:textAllCaps="false"
        android:textColor="@color/grayShadeThree"
        android:textSize="@dimen/_11sdp"

        app:layout_constraintBottom_toTopOf="@+id/and"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46sdp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/terms"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_11sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/and"
        android:textColor="@color/grayShadeThree"
        android:textSize="@dimen/_11sdp"

        app:layout_constraintBottom_toBottomOf="@+id/terms"
        app:layout_constraintStart_toEndOf="@+id/terms"
        app:layout_constraintTop_toTopOf="@+id/terms" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/privacy"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_11sdp"

        app:layout_constraintBottom_toBottomOf="@+id/and"
        app:layout_constraintStart_toEndOf="@+id/and"
        app:layout_constraintTop_toTopOf="@+id/and" />

    </androidx.constraintlayout.widget.ConstraintLayout>

