<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/completeYourProfileLayout"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingVertical="@dimen/_15sdp"
    >


    <TextView
        android:id="@+id/text_profileCompletion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="start"
        android:text="@string/yourProfile"
        android:textColor="@color/black"
        android:textSize="@dimen/UITNormalTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completeYourProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/completeYourProfile"
        android:textColor="@color/black"
        android:textSize="@dimen/UITMediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profileCompletion" />

    <TextView
        android:id="@+id/notNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/not"
        android:textAllCaps="false"
        android:textColor="@color/app_color"
        android:textSize="@dimen/UITNormalTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/completeProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completeProfile" />


    <TextView
        android:id="@+id/completeProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/complete"

        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeYourProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>