<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".applicant.welcome.AddEducation">

    <include
        android:id="@+id/includeEducation"
        layout="@layout/save_cut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="left"
        android:text="@string/addEducation"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeEducation" />


    <EditText
        android:id="@+id/university"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/professionalOrUniversityCertification"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEducation" />

    <EditText
        android:id="@+id/fieldOfStudy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/fieldOfStudy"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/university" />

    <EditText
        android:id="@+id/school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/school"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldOfStudy" />

    <EditText
        android:id="@+id/startYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/startYear"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingRight="@dimen/_52sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school" />

    <EditText
        android:id="@+id/graduationDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/graduationDay"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingRight="@dimen/_30sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/startYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startYear"
        app:layout_constraintTop_toTopOf="@+id/startYear" />

</androidx.constraintlayout.widget.ConstraintLayout>
