<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inviteMember"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_450sdp">

    <!--    tools:context=".company.welcome.AddTeam"-->

    <TextView
        android:id="@+id/add_invitation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="left"
        android:text="@string/addInvitation"
        android:textColor="@color/black"
        android:textSize="@dimen/UITXXLargeTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/no_border"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/name"
        android:paddingLeft="@dimen/_22sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_22sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_invitation" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/no_border"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:hint="@string/email"
        android:paddingLeft="@dimen/_22sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_22sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <TextView
        android:id="@+id/addInvitation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_62sdp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/_62sdp"
        android:background="@drawable/login_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/_32sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_32sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>